homework/mp20/fib.txt
【 遇到的问题 】
	1、在
		define i32 @fib(i32 %n) #0 
	   中直接使用 
		%0 = load i32, i32* %n, align 4
	   产生错误信息
		llvm-as: <stdin>:12:23: error: '%n' defined with type 'i32'
		  %0 = load i32, i32* %n, align 4
		                      ^
	   ---------------------------------------------------------------------------
	   # 因为 %n 是 i32 类型，而 load 要求第二个参数为指针类型，故这样使用非法！
	   # 故重新开辟了一个内存单元，用来存 n 的值，方便之后引用
		%n2 = alloca i32, align 4
		store i32 %n, i32* %n2, align 4

	2、好像主要就是上面这一个！

【 重要的部分 】
	主要在于理解各种指针特别时数组的使用！
	trick：通过编写各种小程序来测试前端产生的中间表示，然后总结规律！！！

